@@ -9,6 +9,7 @@ version 2.1
 - fontfamily parameters added (thanks to Peter Ellis)
 - border.col parameter added (thanks to Peter Ellis)
 - bug in quantitative scales fixed
+- added color column and aspect ratio to treemap output
 
 version 2.0.1
 - computation time examples shorter (CRAN policy)
